# samplelam-interp

./: .ghci  .gitignore  .stylish-haskell.yaml  LICENSE  NOTICE.md  README.md  cabal.config  cabal.project.freeze  sample-laminterp.cabal  samplelam-interp.cabal
app/: Main.hs
example/: exception.slam  foldnat.slam  gcd.slam
src/Data/: Annotation.hs  HFunctor.hs  HigherOrder.hs  Membership.hs  Nat.hs
src/Data/HFunctor/: Cofree.hs  Fix.hs  HFix.hs  Identity.hs  OpenUnion.hs  Unsafe.hs
src/Language/SampleLam/: Core.hs  Interpreter.hs  Normalizer.hs  Parser.hs  Printer.hs  Syntax.hs
src/Language/SampleLam/Parser/: Common.hs
src/SampleLam/: Command.hs  Prelude.hs
test/: Doctest.hs  Lint.hs
