cabal-version:  2.4
name:           sample-laminterp
version:        0.1.0.0
author:         Mizunashi Mana
license:        MPL-2.0 OR Apache-2.0
license-file:   LICENSE
build-type:     Custom

flag multithreaded
  Default: False
  Manual: False

common general
  autogen-modules:
      Paths_sample_laminterp
  other-modules:
      Paths_sample_laminterp
  build-depends:
      base
    , constraints
    , extensible
    , lens
    , parsers
    , prettyprinter
    , profunctors
    , trifecta
  ghc-options:
      -Wall
      -Wcompat
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wredundant-constraints

      -fprint-explicit-foralls
      -fprint-potential-instances

      -dcore-lint
  default-language: Haskell2010
  default-extensions:
      NoImplicitPrelude

      BlockArguments
      ConstraintKinds
      FlexibleInstances
      FlexibleContexts
      LambdaCase
      MultiParamTypeClasses
      OverloadedLabels
      TypeOperators

      DeriveFunctor
      DeriveGeneric
      StandaloneDeriving

      DataKinds
      FunctionalDependencies
      GADTs
      PolyKinds
      QuantifiedConstraints
      RankNTypes
      ScopedTypeVariables
      TypeApplications
      TypeFamilies

common exec
  ghc-options:
      -rtsopts
  ghc-prof-options:
      -rtsopts
      "-with-rtsopts=-xc"
  build-depends:
      sample-laminterp

custom-setup
  setup-depends:
      Cabal >=2.0
    , base
    , cabal-doctest

library
  import: general
  hs-source-dirs: src
  exposed-modules:
      SampleLam.Prelude
      Data.Nat
      Data.HFunctor
      Data.HFunctor.Cofree
      Data.HFunctor.HFix
      Data.HFunctor.OpenUnion
      Data.Annotation
      Language.SampleLam.Syntax
      Language.SampleLam.Core
      Language.SampleLam.Printer
      Language.SampleLam.Parser
      Language.SampleLam.Normalizer
      Language.SampleLam.Interpreter

executable sample-laminterp-exe
  import: general, exec
  hs-source-dirs: app
  main-is: Main.hs

test-suite doctest
  import: general, exec
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Doctest.hs
  autogen-modules:
      Build_doctests
  other-modules:
      Build_doctests
  build-depends:
      doctest
    , QuickCheck
    , template-haskell

test-suite lint
  import: general, exec
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Lint.hs
  build-depends:
      hlint
