cabal-version:  2.4
name:           samplelam-interp
version:        0.1.0.0
author:         Mizunashi Mana
license:        MPL-2.0 OR Apache-2.0
license-file:   LICENSE
homepage:       https://github.com/mizunashi-mana/samplelam-interp#readme
build-type:     Custom

source-repository head
  type:     git
  location: https://github.com/mizunashi-mana/samplelam-interp

flag threaded
  default: False
  manual: False
  description: Build with support for multithreaded execution

common general
  autogen-modules:
      Paths_samplelam_interp
  other-modules:
      Paths_samplelam_interp
  build-depends:
      base
    , constraints
    , extensible
    , unordered-containers
    , lens
    , parsers
    , trifecta
    , indentation-trifecta
    , bound
    , prettyprinter
    , profunctors
  ghc-options:
      -Wall
      -Wcompat
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wredundant-constraints

      -fprint-explicit-foralls
      -fprint-potential-instances

      -dcore-lint
  default-language: Haskell2010
  default-extensions:
      NoImplicitPrelude

      BlockArguments
      ConstraintKinds
      FlexibleInstances
      FlexibleContexts
      LambdaCase
      MultiParamTypeClasses
      OverloadedLabels
      RecordWildCards
      TypeOperators

      GeneralizedNewtypeDeriving
      DeriveFunctor
      DeriveGeneric
      StandaloneDeriving

      DataKinds
      FunctionalDependencies
      GADTs
      PolyKinds
      QuantifiedConstraints
      RankNTypes
      ScopedTypeVariables
      TypeApplications
      TypeFamilies

common exec
  ghc-options:
      -rtsopts
  ghc-prof-options:
      -rtsopts
      "-with-rtsopts=-xc"
  if flag(threaded)
    ghc-options:
      -threaded
      "-with-rtsopts=-N"
    ghc-prof-options:
      -threaded
      "-with-rtsopts=-N -xc"
  build-depends:
      samplelam-interp

custom-setup
  setup-depends:
      Cabal >=2.0
    , base
    , cabal-doctest

library
  import: general
  hs-source-dirs: src
  exposed-modules:
      SampleLam.Prelude
      Data.Nat
      Data.HFunctor
      Data.HFunctor.Cofree
      Data.HFunctor.HFix
      Data.HFunctor.OpenUnion
      Data.HigherOrder
      Data.Annotation
      Language.SampleLam.Syntax
      Language.SampleLam.Core
      Language.SampleLam.Printer
      Language.SampleLam.Parser
      Language.SampleLam.Normalizer
      Language.SampleLam.Interpreter

executable samplelam-interp-exe
  import: general, exec
  hs-source-dirs: app
  main-is: Main.hs

test-suite doctest
  import: general, exec
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Doctest.hs
  autogen-modules:
      Build_doctests
  other-modules:
      Build_doctests
  build-depends:
      doctest
    , QuickCheck
    , template-haskell

test-suite lint
  import: general, exec
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Lint.hs
  build-depends:
      hlint
