cabal-version:  2.4
name:           samplelam-interp
version:        0.1.0.0
author:         Mizunashi Mana
license:        MPL-2.0 OR Apache-2.0
license-file:   LICENSE
homepage:       https://github.com/mizunashi-mana/samplelam-interp#readme
build-type:     Custom

source-repository head
  type:     git
  location: https://github.com/mizunashi-mana/samplelam-interp

flag threaded
  default: False
  manual:  False
  description: Build with support for multithreaded execution

flag optimized
  default: False
  manual:  False
  description: Build with more optimization

common general
  autogen-modules:
      Paths_samplelam_interp
  other-modules:
      Paths_samplelam_interp
  build-depends:
      base
    , bytestring
    , utf8-string
    , unordered-containers
    , constraints
    , extensible
    , lens
    , profunctors
    , reducers
    , parsers
    , trifecta
    , indentation-trifecta
    , bound
    , prettyprinter
    , prettyprinter-ansi-terminal
    , prettyprinter-convert-ansi-wl-pprint
  ghc-options:
      -Wall
      -Wcompat
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wredundant-constraints
      -Wpartial-fields

      -fprint-explicit-foralls
      -fprint-potential-instances

      -dcore-lint
  default-language: Haskell2010
  default-extensions:
      NoImplicitPrelude

      BlockArguments
      ConstraintKinds
      FlexibleInstances
      FlexibleContexts
      LambdaCase
      MultiParamTypeClasses
      OverloadedLabels
      RecordWildCards
      TupleSections
      TypeOperators

      GeneralizedNewtypeDeriving
      DeriveFunctor
      DeriveGeneric
      StandaloneDeriving

      DataKinds
      FunctionalDependencies
      GADTs
      PolyKinds
      QuantifiedConstraints
      RankNTypes
      ScopedTypeVariables
      TypeApplications
      TypeFamilies

common exec
  ghc-options:
      -rtsopts
  ghc-prof-options:
      -rtsopts
      "-with-rtsopts=-xc"
  if flag(threaded)
    ghc-options:
      -threaded
      "-with-rtsopts=-N"
    ghc-prof-options:
      -threaded
      "-with-rtsopts=-N -xc"
  if flag(optimized)
    ghc-options:
      -O2
      -funbox-strict-fields
  build-depends:
      samplelam-interp

custom-setup
  setup-depends:
      Cabal >=2.0
    , base
    , cabal-doctest

library
  import: general
  hs-source-dirs: src
  exposed-modules:
      SampleLam.Prelude
      SampleLam.Command
      Data.Nat
      Data.HFunctor
      Data.HFunctor.Identity
      Data.HFunctor.Cofree
      Data.HFunctor.Fix
      Data.HFunctor.OpenUnion
      Data.HFunctor.Unsafe
      Data.HigherOrder
      Data.Annotation
      Data.Membership
      Language.SampleLam.Syntax
      Language.SampleLam.Core
      Language.SampleLam.Printer
      Language.SampleLam.Parser
      Language.SampleLam.Normalizer
      Language.SampleLam.Interpreter

executable samplelam-interp-exe
  import: general, exec
  hs-source-dirs: app
  main-is: Main.hs

test-suite doctest
  import: general, exec
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Doctest.hs
  autogen-modules:
      Build_doctests
  other-modules:
      Build_doctests
  build-depends:
      doctest
    , QuickCheck
    , template-haskell

test-suite lint
  import: general, exec
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Lint.hs
  build-depends:
      hlint
